On the road to 2024.07:
- optimized init.sh and login.sh
- added OpenSSH 9.8 support
- changed eza default date colour to white
- changed dialog to new colour scheme
- added bandwhich, bottom and zoxide
- launch bandwhich on VC5 nad bottom on VC6
- updated MOTD
- restart iwd on ESSID rescan
setup:
- abort on pacman package installation error
---
Highlights 2024.06:
- systemd 256.x support
- force OpenSSH login through ttyd
- Added bat dust eza fd fzf procs ripgrep rustscan sd
Early Userspace:
- always load i8042 and atkbd module
Environment:
- removed bridge-utils
- added archboot-testsuite.sh
- cleaned up firmware files
- added archboot-fw-check.sh 
- removed marvell prestera firmware
cpio:
- replaced find with fd calls
update:
- removed Xorg Gnome and KDE/Plasma support
- more robust desktop installation routine
launcher:
- added chromium / firefox switch
setup:
- added user management
- added Swap file support
- added Bash / Zsh switch
- added Administrator / wheel group | User switch
- added polkit to default packages
- fixed btrfs subvolume selection
- fixed bcachefs menu cancellation
- added more descriptions to menu points
- added < and > menu points to show direction of navigation
- disabled dangerous Raid5/6 in btrfs menu
- fixed error messages in mountpoints function
- replaced sed with sd
- replaced grep with rg
- replaced find with fd
---
2024.05 Highlights:
- kernel 6.9.x
- neovim 0.10.x
- OpenSSH public key support
Environment:
- removed OpenSSH empty password root login
- implemented OpenSSH public key login
setup:
- fixed BIOS/MBR dos and UEFI gpt device check
- added bcachefs multi device support
---
2024.04 Highlights:
- fedora shim 15.8
- bootloader cleanup
- hwdetect 2024.04.14
Environment:
- removed mkfs.ext2 and fsck.ext2
- added basic tree-sitter neovim plugins
- added argon2 to environment
- fixed ttyd bash login
Basic Setup:
- fixed abort dialog
setup:
- cleanup hwdetect code
- added early userspace busybox or systemd option