@@ -7,6 +7,7 @@ On the road to 2024.07:
 - launch bandwhich on VC5 nad bottom on VC6
 - updated MOTD
 - restart iwd on ESSID rescan
+- added filesystems and Wi-Fi to testsuite
 setup:
 - abort on pacman package installation error
 ---
